--- a/piedrapapeltijera.html
+++ b/piedrapapeltijera.html
@@ -4,22 +4,49 @@
         <meta charset="utf-8"/>
         <title>Juguemos!</title>
          <script>
+          function aleatorio(min, max){
+            return Math.floor(Math.random() * (max - min + 1) + min)
+          }
+          
           //1 Piedra, 2 Papel, 3 Tijera
           //let, es para definir una variable 
           let jugador = 0
-          let pc = 2
+          let min = 1
+          let max = 3
+          let pc = aleatorio (1, 3)
           jugador = prompt("Elige: 1 para Piedra, 2 para Papel, 3 para Tijera")
-          //alert("Elegiste = " + jugador)
 
           if (jugador == 1){
-            alert("Elegiste Piedra")
+            alert("Elegiste Piedra ✊")
+          } else if (jugador == 2){
+            alert("Elegiste Papel ✋")
+          } else if (jugador == 3){
+            alert("Elegiste Tijera ✌️")
+          }else{
+            alert("Elegiste PERDER 🤣")
           }
-          if (jugador == 2){
-            alert("Elegiste Papel")
+
+          if (pc == 1){
+            alert("PC elige Piedra ✊")
+          } else if (pc == 2){
+            alert("PC elige Papel ✋")
+          } else if (pc == 3){
+            alert("PC elige Tijera ✌️")}
+
+          //COMBATE
+          if (pc==jugador){
+            alert("Es un trágico EMPATE!!😤")
+          } else if (jugador == 1 && pc ==3){
+            alert("Acabas de GANAR 😠")
+          } else if (jugador == 2 && pc ==1){
+            alert("Acabas de GANAR 😰")
+          } else if (jugador == 3 && pc ==2){
+            alert("Acabas de GANAR 😭")
           }
-          if (jugador == 3){
-            alert("Elegiste Tijera")
+          else {
+            alert("PERDISTE!! 😂🤣 ")
           }
+
         </script>
     </head>
     <body>
