--- a/piedrapapeltijera.html
+++ b/piedrapapeltijera.html
@@ -7,32 +7,30 @@
           function aleatorio(min, max){
             return Math.floor(Math.random() * (max - min + 1) + min)
           }
-          
-          //1 Piedra, 2 Papel, 3 Tijera
-          //let, es para definir una variable 
+
+          function eleccion(jugada){
+            let resultado = ""
+            if (jugada == 1){
+                resultado = " Piedra ✊"
+            } else if (jugada == 2){
+                resultado = "Papel ✋"
+            } else if (jugada == 3){
+                resultado = " Tijera ✌️"
+            } else {
+                resultado = "Elegiste PERDER 🤣"
+            }
+            return resultado
+          }
+
           let jugador = 0
           let min = 1
           let max = 3
           let pc = aleatorio (1, 3)
           jugador = prompt("Elige: 1 para Piedra, 2 para Papel, 3 para Tijera")
 
-          if (jugador == 1){
-            alert("Elegiste Piedra ✊")
-          } else if (jugador == 2){
-            alert("Elegiste Papel ✋")
-          } else if (jugador == 3){
-            alert("Elegiste Tijera ✌️")
-          }else{
-            alert("Elegiste PERDER 🤣")
-          }
-
-          if (pc == 1){
-            alert("PC elige Piedra ✊")
-          } else if (pc == 2){
-            alert("PC elige Papel ✋")
-          } else if (pc == 3){
-            alert("PC elige Tijera ✌️")}
-
+          alert ("Tu eliges "+ eleccion(jugador))
+          alert ("PC elige: " + eleccion(pc))
+   
           //COMBATE
           if (pc==jugador){
             alert("Es un trágico EMPATE!!😤")
