--- a/mishimon/index.html
+++ b/mishimon/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Mishimon</title>
-         <script src=""></script>
+        <script src="./js/mishimon.js"></script>
     </head>
 
     <body>
@@ -19,7 +19,7 @@
             <label for="ratigueya">Ratigueya</label>
             <input type="radio" name="mascota" id="ratigueya" />
 
-            <button>Seleccionar</button>
+            <button id="boton-mascota">Seleccionar</button>
         </section>
 
         <section id="seleccionar-ataque">
@@ -27,9 +27,9 @@
             <p>Tu mascota tiene <samp>3</samp> vidas</p>
             <p>La mascota de tu enemigo <samp>3</samp> vidas</p>
             <p>
-                <button>Tierra 🌱</button>
-                <button>Fuego 🔥</button>
-                <button>Agua 💧</button>
+                <button id="boton-tierra">Tierra 🌱</button>
+                <button id="boton-fuego">Fuego 🔥</button>
+                <button id="boton-agua">Agua 💧</button>
             </p>
         </section>
 
@@ -38,7 +38,7 @@
         </section>
 
         <section id="reiniciar">
-            <button>Reiniciar</button>
+            <button id="boton-reiniciar">Reiniciar</button>
         </section>
 
 
