addEventListener de JavaScript

--- a/mishimon/index.html
+++ b/mishimon/index.html
@@ -12,20 +12,20 @@
         <section id="seleccionar-mascota">
             <h2>Elige a tu mascota : </h2>
 
-            <label for="hipodoge" >Hipodoge</label>
-            <input type="radio" name="mascota" id="hipodoge" />
-            <label for="capipepo">Capipepo</label>
-            <input type="radio" name="mascota" id="capipepo" />
-            <label for="ratigueya">Ratigueya</label>
-            <input type="radio" name="mascota" id="ratigueya" />
+            <label for="growmon" >Growmon</label>
+            <input type="radio" name="mascota" id="growmon" />
+            <label for="firemon">Firemon</label>
+            <input type="radio" name="mascota" id="firemon" />
+            <label for="waltermon">Waltermon</label>
+            <input type="radio" name="mascota" id="waltermon" />
 
             <button id="boton-mascota">Seleccionar</button>
         </section>
 
         <section id="seleccionar-ataque">
             <h2>Elige tu ataque : </h2>
-            <p>Tu mascota tiene <samp>3</samp> vidas</p>
-            <p>La mascota de tu enemigo <samp>3</samp> vidas</p>
+            <p>Tu mascota <samp id="mascota-jugador"></samp> tiene <samp>3</samp> vidas</p>
+            <p>La mascota <samp id="mascota-enemigo"></samp> de tu enemigo <samp>3</samp> vidas</p>
             <p>
                 <button id="boton-tierra">Tierra 🌱</button>
                 <button id="boton-fuego">Fuego 🔥</button>
