--- a/mishimon/index.html
+++ b/mishimon/index.html
@@ -34,7 +34,7 @@
         </section>
 
         <section id="mensajes">
-            <p>Tu mascota ataco con FUEGO, la mascota de tu enemigo ataco con TIERRA - GANASTE 👑🏅🏆</p>
+            <p>Tu mascota ataco con <samp id="mascota-jugador"></samp>, la mascota de tu enemigo ataco con <samp id="mascota-jugador"></samp>- GANASTE 👑🏅🏆</p>
         </section>
 
         <section id="reiniciar">
