Seteando mensaje final

--- a/mishimon/index.html
+++ b/mishimon/index.html
@@ -24,8 +24,8 @@
 
         <section id="seleccionar-ataque">
             <h2>Elige tu ataque : </h2>
-            <p>Tu mascota <samp id="mascota-jugador"></samp> tiene <samp>3</samp> vidas</p>
-            <p>La mascota <samp id="mascota-enemigo"></samp> de tu enemigo <samp>3</samp> vidas</p>
+            <p>Tu mascota <samp id="mascota-jugador"></samp> tiene <samp id="vidas-jugador">3</samp> vidas</p>
+            <p>La mascota <samp id="mascota-enemigo"></samp> de tu enemigo <samp id="vidas-enemigo">3</samp> vidas</p>
             <p>
                 <button id="boton-tierra">Tierra 🌱</button>
                 <button id="boton-fuego">Fuego 🔥</button>
