--- a/mishimon/index.html
+++ b/mishimon/index.html
@@ -4,12 +4,13 @@
         <meta charset="utf-8"/>
         <title>Mishimon</title>
         <script src="./js/mishimon.js"></script>
+        <link rel="stylesheet" href="./styles.css">
     </head>
 
     <body>
-        <h1>MISHIMON 🌱🔥💧</h1>
-
         <section id="seleccionar-mascota">
+            <h1 class="titulo">MISHIMON 🌱🔥💧</h1>
+
             <h2>Elige a tu mascota : </h2>
 
             <label for="growmon" >Growmon</label>
