Estilizando primera vista

--- a/mishimon/index.html
+++ b/mishimon/index.html
@@ -19,19 +19,19 @@
             <div class="tarjetas">
                 <label class="tajeta-de-mishimon" for="growmon" >
                     <p>Growmon</p>
-                    <img src="">
+                    <img src="./assets/mishimon_growmon.webp" alt="growmon">
                 </label>
                 <input type="radio" name="mascota" id="growmon" />
 
                 <label class="tajeta-de-mishimon" for="firemon">
                     <p>Firemon</p>
-                    <img src="">
+                    <img src="./assets/mishimon_firemon.webp" alt="firemon">
                 </label>
                 <input type="radio" name="mascota" id="firemon" />
 
                 <label class="tajeta-de-mishimon" for="waltermon">
-                    <p>Waltermon</p>
-                    <img src="">
+                    <p>Walthermon</p>
+                    <img src="./assets/mishimon_waltermon.webp" alt="waltermon">
                 </label>
                 <input type="radio" name="mascota" id="waltermon" />
             </div>
