--- a/mishimon02/index.html
+++ b/mishimon02/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="utf-8"/>
-        <title>Mishimon</title>
+        <title>Mishimon 02</title>
         <link rel="stylesheet" href="./styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,6 +19,11 @@
             </div>
 
             <button id="boton-mascota">Seleccionar</button>
+        </section>
+
+        <section id="ver-mapa">
+            <h1 class="titulo"> Recorre el mapa con tu Mishi </h1>
+            <canvas id="mapa"></canvas>
         </section>
 
         <section id="seleccionar-ataque">
