Selección de jugador y enemigo, refactorizando código

--- a/mishimon03/index.html
+++ b/mishimon03/index.html
@@ -28,11 +28,13 @@
         
             <div class="control-direccional">
                 <button class="flecha arriba">⬆</button>
+
                 <div class="fila">
                     <button class="flecha izquierda">⬅</button>
                     <button class="boton-central">🎮</button>
                     <button class="flecha derecha">➡</button>
                 </div>
+
                 <button class="flecha abajo">⬇</button>
             </div>
         </section>
@@ -71,7 +73,7 @@
             </div>
            
         </section>
-        <script type="module" src="./js/mishimon.js"></script>
+        <script type="module" src="./js/main.js"></script>
     </body>
 
 </html>
