jugador y enemigo aleatorio en el mapa, problemas la funcion radom

--- a/mishimon03/index.html
+++ b/mishimon03/index.html
@@ -73,6 +73,12 @@
             </div>
            
         </section>
+
+        <div id="ventanaEmergente" style="display:none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: rgba(0, 0, 0, 0.8); color: white; padding: 20px; border-radius: 10px; z-index: 10;">
+            <p>¡Has tocado al enemigo!</p>
+            <button onclick="cerrarVentanaEmergente()">Cerrar</button>
+        </div>
+        
         <script type="module" src="./js/main.js"></script>
     </body>
 
