primera vista y mishimones seteados

--- a/mishimon03/index.html
+++ b/mishimon03/index.html
@@ -18,6 +18,22 @@
             <div id='divTarjetas' class="tarjetas"></div>
             <button id="btnMascota">Seleccionar</button>
         </section>
+        <section id="sectionConfirmSelection" class="modal" style="display: none;">
+            <div class="modal-content">
+                <h3>Reglas del Juego</h3>
+                <div id="infoMascotaSeleccionada"></div>
+                <p>Tanto tú como el enemigo tendrán 5 oportunidades para atacar.</p>
+                <p>Al final de los turnos, gana quien tenga más vida.</p>
+                <ul>
+                    <li>🔥 Fuego vence a 🌱 Tierra</li>
+                    <li>💧 Agua vence a 🔥 Fuego</li>
+                    <li>🌱 Tierra vence a 💧 Agua</li>
+                </ul>
+                <h2>¡Piensa estratégicamente y lucha por la victoria!</h2>
+                <button id="btnProbarOtro">Probar con otro</button>
+                <button id="btnConfirmarSeleccion">¡De acuerdo!</button>
+            </div>
+        </section>
         <section id="sectionVerMapa">
             <h1 class="titulo">Recorre el mapa con tu Mishi</h1>
             <div id="divAreaJuego">
